// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Component Only opens one section based on button click 1`] = `
<div>
  <ul
    className="Accordion"
  >
    <li>
      <button
        onClick={[Function]}
        type="button"
      >
        Section 1
      </button>
    </li>
    <li>
      <button
        onClick={[Function]}
        type="button"
      >
        Section 2
      </button>
    </li>
    <li>
      <button
        onClick={[Function]}
        type="button"
      >
        Section 3
      </button>
      <p>
        Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
      </p>
    </li>
  </ul>
</div>
`;

exports[`Accordion Component Opens a clicked button section 1`] = `
<div>
  <ul
    className="Accordion"
  >
    <li>
      <button
        onClick={[Function]}
        type="button"
      >
        Section 1
      </button>
      <p>
        Lorem ipsum dolor sit amet consectetur adipisicing elit.
      </p>
    </li>
    <li>
      <button
        onClick={[Function]}
        type="button"
      >
        Section 2
      </button>
    </li>
    <li>
      <button
        onClick={[Function]}
        type="button"
      >
        Section 3
      </button>
    </li>
  </ul>
</div>
`;

exports[`Accordion Component Renders empty given no props without errors 1`] = `
<div>
  <ul
    className="Accordion"
  />
</div>
`;

exports[`Accordion Component Renders no sections by default 1`] = `
<div>
  <ul
    className="Accordion"
  >
    <li>
      <button
        onClick={[Function]}
        type="button"
      >
        Section 1
      </button>
    </li>
    <li>
      <button
        onClick={[Function]}
        type="button"
      >
        Section 2
      </button>
    </li>
    <li>
      <button
        onClick={[Function]}
        type="button"
      >
        Section 3
      </button>
    </li>
  </ul>
</div>
`;

exports[`renders empty given no tabs 1`] = `<div />`;
